--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CISC-191-Intermediate-Java-Project</name>
+	<name>CISC191IntermediateJavaProject - Byron Lu</name>
 	<comment></comment>
 	<projects>
 	</projects>
